--- a/references.bib
+++ b/references.bib
@@ -16,7 +16,7 @@
 @Article{Haimovich2008,
   author   = {A. M. {Haimovich} and R. S. {Blum} and L. J. {Cimini}},
   title    = {{MIMO} Radar with Widely Separated Antennas},
-  journal  = {IEEE Signal Processing Magazine},
+  journal  = {IEEE Signal Process. Mag.},
   year     = {2008},
   volume   = {25},
   number   = {1},
@@ -39,7 +39,7 @@
 @Article{Oksanen2015,
   author   = {J. {Oksanen} and V. {Koivunen}},
   title    = {An Order Optimal Policy for Exploiting Idle Spectrum in Cognitive Radio Networks},
-  journal  = {IEEE Transactions on Signal Processing},
+  journal  = {IEEE Trans. on Signal Process.},
   year     = {2015},
   volume   = {63},
   number   = {5},
@@ -53,13 +53,12 @@
 
 @Article{Garivier2008,
   author        = {{Garivier}, Aur{\'e}lien and {Moulines}, Eric},
-  title         = {{On Upper-Confidence Bound Policies for Non-Stationary Bandit Problems}},
+  title         = {On Upper-Confidence Bound Policies for Non-Stationary Bandit Problems},
   journal       = {arXiv e-prints},
   year          = {2008},
   pages         = {arXiv:0805.3415},
   month         = {May},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
-  adsurl        = {https://ui.adsabs.harvard.edu/abs/2008arXiv0805.3415G},
   archiveprefix = {arXiv},
   eid           = {arXiv:0805.3415},
   eprint        = {0805.3415},
@@ -81,7 +80,7 @@
 @InProceedings{Mukherjee2012,
   author    = {A. {Mukherjee} and A. {Hottinen}},
   title     = {Learning algorithms for energy-efficient {MIMO} antenna subset selection: Multi-armed bandit framework},
-  booktitle = {2012 Proceedings of the 20th European Signal Processing Conference (EUSIPCO)},
+  booktitle = {Proceedings of the 20th Eur. Signal Process. Conf. (EUSIPCO)},
   year      = {2012},
   pages     = {659-663},
   month     = {Aug},
@@ -89,7 +88,6 @@
   groups    = {Antenna selection},
   issn      = {2219-5491},
   keywords  = {active antennas;Bayes methods;energy conservation;learning (artificial intelligence);MIMO communication;mobile handsets;multifrequency antennas;power consumption;radio transceivers;radiowave propagation;wireless channels;energy efficiency;MIMO antenna subset selection;multiarmed bandit framework;mobile device;power consumption;wireless propagation medium;random variation;wireless channel;transceiver;active antenna subset;power normalized throughput;sequential learning scheme;naive approach;Antennas;Transceivers;Throughput;Wireless communication;MIMO;Power demand;Radio frequency;Antenna selection;energy efficiency;learning;multi-armed bandit},
-  url       = {https://ieeexplore.ieee.org/document/6334260},
 }
 
 @Book{Lattimore2019,
@@ -104,32 +102,62 @@
 @InProceedings{Godrich2011,
   author    = {H. {Godrich} and A. {Petropulu} and H. V. {Poor}},
   title     = {Antenna subset selection in distributed multiple-radar architectures: A knapsack problem formulation},
-  booktitle = {2011 19th European Signal Processing Conference},
+  booktitle = {19th Eur. Signal Process. Conf.},
   year      = {2011},
   pages     = {1693-1697},
-  month     = {Aug},
+  month     = {Aug.},
   abstract  = {In this paper, a performance driven resource allocation scheme for target localization in multiple radar systems is proposed and evaluated. An optimal subset of active antennas of predetermined size, K, is selected such that the localization mean-square error (MSE) is minimized. The problem is formulated in a combinatorial optimization framework as a knapsack problem (KP). The Cramer-Rao bound (CRB) is used as a performance metric. Cost parameters, representing operational cost or any other utilization constraints, are associated with each of the antennas. These are incorporated into the KP formulation, integrating decision making factors in the selection process. Antenna subset selection is implemented through an approximation algorithm, by successively selecting antennas so as to maximize the temporal Fisher information matrix (FIM) for a given subset size. The proposed approximation algorithm offers considerable reduction in computational complexity when compared with exhaustive search, supporting distributive processing and low performance loss.},
   groups    = {Radar optimization, Antenna selection},
   issn      = {2076-1465},
   keywords  = {combinatorial mathematics;computational complexity;decision making;knapsack problems;mean square error methods;optimisation;radar antennas;resource allocation;antenna subset selection;distributed multiple-radar architecture;knapsack problem formulation;resource allocation scheme;target localization;mean-square error minimization;MSE minimization;combinatorial optimization framework;Cramer-Rao bound;CRB;KP formulation;decision making;approximation algorithm;temporal Fisher information matrix;FIM;computational complexity;exhaustive search;distributive processing;Radar cross-sections;Receiving antennas;Manganese;Approximation algorithms;Radar antennas;MIMO radar;Multistatic radar;Cramer-Rao bound;resource allocation;target localization},
-  url       = {https://ieeexplore.ieee.org/document/7074273},
 }
+
+
+
+
+
+
+
+@article{doi:10.1155/2014/769404,
+author = {Bin Sun and Haowen Chen and Degui Yang and Xiang Li},
+title ={Antenna Selection and Placement Analysis of MIMO Radar Networks for Target Localization},
+journal = {International Journal of Distributed Sensor Networks},
+volume = {10},
+number = {5},
+pages = {769404},
+year = {2014},
+doi = {10.1155/2014/769404},
+
+URL = { 
+        https://doi.org/10.1155/2014/769404
+    
+},
+eprint = { 
+        https://doi.org/10.1155/2014/769404
+    
+}
+,
+    abstract = { A distributed MIMO radar network consists of a large number of transmitters/receivers to cover a sensing area of interest but under the constraint that the number of antennas is limited. The problem of selecting a subset of antennas at a sampling time to maximize the diversity capability of the MIMO radar in terms of target resolvability is addressed from the information geometric viewpoint in this paper. Fisher information matrix of distributed MIMO radar which takes both radar waveform and SNR into account is derived as a function of individual antenna locations. The Fisher information distance (FID) between the measurement distribution based on all antennas and that based on only the selected set of antennas is calculated and is adopted as the criterion of selecting a subset of antennas. The underlying antenna selection problem is then to select a subset of antennas from all antennas which can result in the “shortest” FID with respect to a given target location. Since an NP hard search process is involved, an exhaustive search method is considered for efficient antenna subset selection. Simulation examples are presented to demonstrate the effectiveness of the proposed algorithm compared with other criteria in different antenna configurations. }
+}
+
+
+
 
 @Article{Sun2014,
   author  = {Sun, Bin and Chen, Haowen and Yang, Degui and Li, Xiang},
   title   = {Antenna Selection and Placement Analysis of {MIMO} Radar Networks for Target Localization},
-  journal = {International Journal of Distributed Sensor Networks},
+  journal = {Int. J. of Distrib. Sensor Networks},
   year    = {2014},
-  volume  = {2014},
-  pages   = {1-10},
-  month   = {05},
+  volume  = {10},
+  number  = {5},
+  month   = {May},
   doi     = {10.1155/2014/769404},
   groups  = {Antenna selection},
 }
 
 @Article{Garivier2011,
   author        = {{Garivier}, Aur{\'e}lien and {Capp{\'e}}, Olivier},
-  title         = {{The KL-UCB Algorithm for Bounded Stochastic Bandits and Beyond}},
+  title         = {The {KL-UCB} Algorithm for Bounded Stochastic Bandits and Beyond},
   journal       = {arXiv e-prints},
   year          = {2011},
   pages         = {arXiv:1102.2490},
@@ -160,28 +188,22 @@
   groups        = {MAB, MAB algorithms},
   keywords      = {Mathematics - Statistics Theory, Computer Science - Machine Learning, Computer Science - Systems and Control, Mathematics - Optimization and Control, 93E35},
   primaryclass  = {math.ST},
-  url           = {https://arxiv.org/abs/1102.2490v5},
 }
 
-@Article{Agrawal2011,
-  author        = {Shipra Agrawal and Navin Goyal},
-  title         = {Analysis of Thompson Sampling for the multi-armed bandit problem},
-  journal       = {CoRR},
-  year          = {2011},
-  volume        = {abs/1111.1797},
-  archiveprefix = {arXiv},
-  bibsource     = {dblp computer science bibliography, https://dblp.org},
-  biburl        = {https://dblp.org/rec/bib/journals/corr/abs-1111-1797},
-  eprint        = {1111.1797},
-  groups        = {MAB, MAB algorithms},
-  timestamp     = {Mon, 13 Aug 2018 16:48:14 +0200},
-  url           = {http://arxiv.org/abs/1111.1797},
+@InProceedings{Agrawal2012,
+  author    = {Shipra Agrawal and Navin Goyal},
+  title     = {Analysis of {Thompson} Sampling for the Multi-armed Bandit Problem},
+  booktitle = {Proc. of the 25th Annu. Conf. on Learn. Theory},
+  year      = {2012},
+  pages     = {39.1-39.26},
+  abstract  = {The multi-armed bandit problem is a popular model for studying exploration/exploitation trade-off in sequential decision problems. Many algorithms are now available for this well-studied problem. One of the earliest algorithms, given by W. R. Thompson, dates back to 1933. This algorithm, referred to as Thompson Sampling, is a natural Bayesian algorithm. The basic idea is to choose an arm to play according to its probability of being the best arm. Thompson Sampling algorithm has experimentally been shown to be close to optimal. In addition, it is efficient to implement and exhibits several desirable properties such as small regret for delayed feedback. However, theoretical understanding of this algorithm was quite limited. In this paper, for the first time, we show that Thompson Sampling algorithm achieves logarithmic expected regret for the stochastic multi-armed bandit problem. More precisely, for the stochastic two-armed bandit problem, the expected regret in time T is O(\frac\ln T∆ + \frac1∆^3). And, for the stochastic N-armed bandit problem, the expected regret in time T is O(\left[\left(\sum_i=2^N \frac1\Delta_i^2\right)^2\right] \ln T). Our bounds are optimal but for the dependence on \Delta_i and the constant factors in big-Oh.},
+  groups    = {MAB, MAB algorithms},
 }
 
 @InProceedings{Oksanen2017,
   author    = {J. {Oksanen} and V. {Koivunen}},
   title     = {Learning spectrum opportunities in non-stationary radio environments},
-  booktitle = {IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  booktitle = {IEEE Int. Conf. on Acoust., Speech and Signal Process. (ICASSP)},
   year      = {2017},
   pages     = {2447-2451},
   month     = {March},
@@ -192,12 +214,10 @@
 
 @InProceedings{Raj2017,
   author    = {Raj,Vishnu and Kalyani,Sheetal},
-  title     = {Taming Non-stationary Bandits: A Bayesian Approach},
-  booktitle = {Conference on Neural Information Processing Systems (NIPS)},
+  title     = {Taming Non-stationary Bandits: A {Bayesian} Approach},
+  booktitle = {Conf. on Neural Inf. Process. Syst. (NIPS)},
   year      = {2017},
-  note      = {1707.09727},
   groups    = {MAB, MAB algorithms},
-  url       = {https://arxiv.org/abs/1707.09727},
 }
 
 @Article{Burtini2015,
@@ -228,7 +248,6 @@
   groups        = {MAB, MAB surveys},
   keywords      = {Statistics - Machine Learning, Computer Science - Machine Learning},
   primaryclass  = {stat.ML},
-  url           = {https://arxiv.org/abs/1510.00757},
 }
 
 @Article{Slivkins2019,
@@ -243,7 +262,6 @@
   eprint        = {1904.07272},
   groups        = {MAB, MAB surveys},
   timestamp     = {Thu, 25 Apr 2019 13:55:01 +0200},
-  url           = {http://arxiv.org/abs/1904.07272},
 }
 
 @Article{Chen2014,
@@ -258,7 +276,6 @@
   eprint        = {1407.8339},
   groups        = {MAB, MAB surveys},
   timestamp     = {Wed, 18 Dec 2019 12:08:13 +0100},
-  url           = {http://arxiv.org/abs/1407.8339},
 }
 
 @Article{Gulati2014,
@@ -294,7 +311,7 @@
 @Article{Zhao2008,
   author   = {Q. {Zhao} and B. {Krishnamachari} and K. {Liu}},
   title    = {On myopic sensing for multi-channel opportunistic access: structure, optimality, and performance},
-  journal  = {IEEE Transactions on Wireless Communications},
+  journal  = {IEEE Trans. on Wireless Communications},
   year     = {2008},
   volume   = {7},
   number   = {12},
@@ -310,7 +327,7 @@
 @InProceedings{Kuai2019,
   author    = {Z. {Kuai} and T. {Wang} and S. {Wang}},
   title     = {Transmit Antenna Selection in Massive {MIMO} Systems: An Online Learning Framework},
-  booktitle = {2019 IEEE/CIC International Conference on Communications in China (ICCC)},
+  booktitle = {IEEE/CIC International Conference on Communications in China (ICCC)},
   year      = {2019},
   pages     = {496-501},
   month     = {Aug},
@@ -324,7 +341,7 @@
 @InProceedings{Aittomaeki2011,
   author    = {T. {Aittomäki} and H. {Godrich} and H. V. {Poor} and V. {Koivunen}},
   title     = {Resource allocation for target detection in distributed {MIMO} radars},
-  booktitle = {2011 Conference Record of the Forty Fifth Asilomar Conference on Signals, Systems and Computers (ASILOMAR)},
+  booktitle = {Conf. Rec. of the 45th Asilomar Conf. on Signals, Syst. and Computers (ASILOMAR)},
   year      = {2011},
   pages     = {873-877},
   month     = {Nov},
