--- a/paper.tex
+++ b/paper.tex
@@ -138,9 +138,9 @@ Another way to form the estimates is to probe the different channels for a suffi
 The probing needs to be efficient since the channels are continuously evolving and the probing will impact the radar performance because it requires performing extra tasks in addition to the main operation of the radar.  Therefore, it is necessary to decide when to exploit the TX-RX subset currently providing the best payoff or explore other subsets that may or may not provide even higher SINR levels. 
 This is the exploration-exploitation trade-off.
 
-A multi-armed bandit (MAB) framework, provides policies for selecting actions to balance the exploration and exploitation trade-off while maximizing the employed reward function \cite{Lattimore2019}.
-In the literature, such a framework is effectively used for example in opportunistic spectrum access, in which the secondary user must choose frequency band in a way that interference to the primary user is not caused \cite{Zhao2008}.
-Also, authors in \cite{Mukherjee2012} and \cite{Kuai2019} propose using a combinatorial MAB approach as a robust way for selecting the MIMO antenna subset for maximizing throughput in communication systems.
+A multi-armed bandit (MAB) framework provides policies for selecting actions to balance the exploration and exploitation trade-off while maximizing the employed reward function \cite{Lattimore2019}.
+In the literature, such a framework is effectively used for example in opportunistic spectrum access, in which the secondary user must choose frequency band in a way that it does not cause interference to the primary user \cite{Zhao2008}.
+Moreover, authors in \cite{Mukherjee2012} and \cite{Kuai2019} use a combinatorial MAB approach as a robust way for selecting the MIMO antenna subset for maximizing throughput in communication systems.
 Extensions from combinatorial multi-armed bandits are used to address the problem with large combinatorial action space.
 
 This paper proposes a machine learning approach for the active TX-RX subset selection in the distributed MIMO radar context.
@@ -187,7 +187,7 @@ where the noise power and the interference power is subtracted from the received
 Note that the SINR is time dependent because random variable $\esp$ is non-stationary. 
 
 
-Performance in target detection and target localization depend on the SINR level \cite{aittomaeki2011, Aittomaeki2018, Godrich2011, Sun2014}.
+Performance in target detection and target localization depend on the SINR level \cite{Aittomaeki2011, Godrich2011, Sun2014}.
 Therefore, a reward function for reinforcement learning is proposed that depends on the vector $\vsinrexp$ that consists of all the SINR values $\esinrexp$.
 The following reward function is used for the employed MAB learning
 \begin{equation}\label{eq:reward_func}
@@ -222,7 +222,7 @@ Different subsets must be explored sufficiently large number of times to reinfor
 The MAB problem is a sequential decision-making problem in which an agent needs to decide on an action from several competing actions \cite{Sutton2018}.
 The word arm originates from a slot machine that has a pull lever, and the pull lever is called an arm.
 Pulling an arm of a slot machine gives a reward based on a certain probability distribution.
-Moreover, the specific formulation considered in this paper is stochastic multi-armed bandits, in which each arm is associated with one state, thus with one reward distribution with constant or slowly changing parameters.
+Moreover, the specific formulation considered in this paper is stochastic multi-armed bandits, in which the arm rewards are generated from a single reward distribution.
 In the MAB problem, the agent needs to sequentially decide from many arms which arm to pull to maximize the cumulative reward.
 The strategy of how the agent chooses the arms is called a policy.
 
@@ -256,11 +256,11 @@ These algorithms are
     \item $\epsilon$-greedy \cite{Sutton2018},
     \item Upper Confidence Bound (UCB1) \cite{Sutton2018, Garivier2008},
     \item Kullback Leibler Upper Confidence Bound (KL-UCB) \cite{Garivier2011},
-    \item Thompson sampling \cite{Agrawal2011, Raj2017} and
+    \item Thompson sampling \cite{agrawal2012, Raj2017} and
     \item Recency-Based Exploration (RBE) \cite{Oksanen2015,Oksanen2017}.
 \end{enumerate}
 An analysis for stationary and non-stationary reward distributions can be found in the references.
-Also, other algorithms and more extensive discussion on the multi-armed bandits can be found in \cite{Lattimore2019, Sutton2018, Burtini2015, Slivkins2019}.
+Also, other algorithms and more extensive discussion on the multi-armed bandits can be found in \cite{Lattimore2019}.
 
 In the $\epsilon$-greedy algorithm the probability of choosing a random arm is $0 < \epsilon \ll 1$ and this probability remains constant in time.
 When not selecting an arm randomly, the algorithm chooses the arm which has the highest action-value.
@@ -498,8 +498,6 @@ It can be observed that the MAB algorithms perform much better than the explorat
 \subsection{Non-stationary target}
 
 
-For the non-stationary case, the path-losses $\vpl$ and the angle-dependent scattering coefficients $\vrcs$ change in time.
-In other words, the instantaneous SINR values $\vsinr$ are non-stationary and the channel SINR values $\vsinrexp$ are time-dependent.
 The algorithms adapt to the non-stationary conditions by using the discounted action-value and discounted exploration parameters.
 The discount factor is set to $\alpha = 0.998$.
 Also, each element of $\vsinrb$ is divided by the maximum value before calculating the index.
