--- a/paper.tex
+++ b/paper.tex
@@ -181,7 +181,7 @@ Moreover, unintentional and intentional interference levels might change in time
 It is assumed that sufficiently accurate estimates of the noise power $\thnoise$ and the interference power $\eintnoise$ at receiver $n$ are available.
 Therefore, we can express the channel SINR on a linear scale as
 \begin{equation}\label{eq:sinr}
-     \esinrexp = \frac{\E{\esp}- (\thnoise + \eintnoise)}{\thnoise + \eintnoise },
+     \esinrexp = \frac{\E{\esp}}{\thnoise + \eintnoise } - 1,
 \end{equation}
 where the noise power and the interference power is subtracted from the received signal power and $\E{\esp} \geq \thnoise + \eintnoise$.
 Note that the SINR is time dependent because random variable $\esp$ is non-stationary. 
@@ -221,10 +221,11 @@ Different subsets must be explored sufficiently large number of times to reinfor
 
 The MAB problem is a sequential decision-making problem in which an agent needs to decide on an action from several competing actions \cite{Sutton2018}.
 The word arm originates from a slot machine that has a pull lever, and the pull lever is called an arm.
-Pulling an arm of a slot machine gives a reward based on a certain probability distribution.
-Moreover, the specific formulation considered in this paper is a stochastic multi-armed bandit, in which the arm rewards are generated from a single reward distribution.
+Pulling an arm of a slot machine changes the state according to the Markov chain model and gives a reward based on a certain probability distribution.
 In the MAB problem, the agent needs to sequentially decide from many arms which arm to pull to maximize the cumulative reward.
 The strategy of how the agent chooses the arms is called a policy.
+The specific formulation considered in this paper is a stochastic multi-armed bandit, in which each arm is associated with one state.
+
 
 Usually, the performance of a policy is measured with regret.
 The regret quantifies the cost of learning by measuring how much reward agent has missed from the cumulative reward.
@@ -256,16 +257,16 @@ These algorithms are
     \item $\epsilon$-greedy \cite{Sutton2018},
     \item Upper Confidence Bound (UCB1) \cite{Sutton2018, Garivier2008},
     \item Kullback Leibler Upper Confidence Bound (KL-UCB) \cite{Garivier2011},
-    \item Thompson sampling \cite{agrawal2012, Raj2017} and
+    \item Thompson sampling \cite{agrawal2012, Raj2017}, and
     \item Recency-Based Exploration (RBE) \cite{Oksanen2015,Oksanen2017}.
 \end{enumerate}
-An analysis for stationary and non-stationary reward distributions can be found in the references.
+An analysis for stationary and non-stationary reward distributions can be found from the references.
 Also, other algorithms and more extensive discussion on the stochastic multi-armed bandits can be found in \cite{Lattimore2019}.
 
 In the $\epsilon$-greedy algorithm the probability of choosing a random arm is $0 < \epsilon \ll 1$ and this probability remains constant or decreases slowly in time.
 When not selecting an arm randomly, the algorithm chooses the arm which has the highest action-value.
 The UCB1 and KL-UCB are policies which are based on deriving an upper confidence bound for the expected rewards and the arm with highest bound is selected.
-Thompson sampling is Bayesian algorithm where the posterior probability distributions for the expected rewards are formed from the collected rewards.
+Thompson sampling is a Bayesian algorithm where the posterior probability distributions for the expected rewards are formed from the collected rewards.
 Then the posterior distributions are sampled at each time instant and the arm with the highest sample is selected.
 Finally, the RBE is based on defining an exploration term to support choosing arms which have not been explored recently.
 In addition, the term is constructed in a way that the agent prefers arms which have the highest action-values.
@@ -460,9 +461,9 @@ In the stationary scenario, there is a target that remains stationary at positio
 In the non-stationary scenario, a target moves from $(0, 0)$ to $(1, 1)$ on a linear trajectory with a constant velocity.
 All other parameters for the environment remain the same in both scenarios.
 The five algorithms that were briefly reviewed in section~\ref{sec:mab} are used in the simulations.
-The performances of the different MAB algorithms were evaluated using Monte Carlo simulations with $1000$ iterations.
+The performance of the different MAB algorithms were evaluated using Monte Carlo simulations with $1000$ iterations.
 
-A simple method that selects the closest subset at each time instant is proposed to compare the MAB algorithms to a more conventional exploration-free method. 
+A simple method that selects the closest subset at each time instant is used to compare the MAB algorithms to a more conventional exploration-free method. 
 The comparison is performed by comparing expectation of the achieved rewards through the simulation period. 
 
 The achieved rewards for two well-functioning MAB algorithms, 
